--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Global Community</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <header class="hero-section">
         <video autoplay muted loop playsinline class="background-video">
-            <source src="IMK/assets/video/background.mp4" type="video/mp4">
+            <source src="assets/video/background.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <div class="overlay">
