--- a/index.html
+++ b/index.html
@@ -5,36 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Global Community</title>
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Forum&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header class="hero-section">
         <video autoplay muted loop playsinline class="background-video">
             <source src="assets/video/background.mp4" type="video/mp4">
-            Your browser does not support the video tag.
         </video>
         <div class="overlay">
-            <h1>Harvard in the World</h1>
-            <p>Our global community</p>
+            <h1>Bensin Impact</h1>
         </div>
     </header>
 
     <section class="global-community">
-        <div class="community-text">
-            <p>Harvard faculty, students, and alumni compose a global network of researchers, scholars, and practitioners exploring and contributing to <strong>health, law, religion, social science, government, education, business, art, news, justice, design,</strong> and <strong>the environment</strong> around the world.</p>
+        <div class="community-content">
+            <h1 class="left-text">Our global community</h1>
+            <p class="right-text">Released on Multiple Platforms <strong>PS5, PS4, PC, XBOX, Android</strong> around the world.</p>
         </div>
 
         <div class="community-stats">
             <div class="stat">
                 <h2>100+ languages</h2>
-                <p>are taught at Harvard, including the recent addition of Tagalog.</p>
+                <p>are taught at Akademiya, including the recent addition of Devanagari script.</p>
             </div>
             <div class="stat">
-                <h2>29.6 million learners</h2>
-                <p>from all across the globe have enrolled in courses on Harvard Online.</p>
+                <h2>2.9 million learners</h2> 
+                <p>from all across the globe have enrolled in courses on Sumeru Akademiya.</p>
             </div>
             <div class="stat">
                 <h2>20+ locations abroad</h2>
-                <p>link Harvard faculty and students to local scholars, businesses, and communities.</p>
+                <p>link Sumeru Akademiya faculty and students to local scholars, businesses, and communities.</p>
             </div>
         </div>
     </section>
