ubah ukuran font

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="stat">
                 <h2>2.9 million learners</h2> 
-                <p>from all across the globe have enrolled in courses on Sumeru Akademiya.</p>
+                <p>from all across the teyvat have enrolled in courses on Sumeru Akademiya.</p>
             </div>
             <div class="stat">
                 <h2>20+ locations abroad</h2>
